@@ -2,5 +2,6 @@ importFrom(stats, "prcomp")
 
 export(Qrot, rbwheel,
        mvBACON, BACON, # but not ".lmBACON"
+       covNNC, cov.nnve,# <- the latter being deprecated
        L1median, optimMethods, nlminbMethods)
 
